clusters/beryjuio-prod/proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
  labels:
    istio-injection: enabled
