clusters/beryjuio-prod/proxy/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-grafana
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-authentik-proxy-infra
      hosts:
        - grafana.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.infra.beryju.org
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-grafana
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-grafana
  hosts:
    - grafana.infra.beryju.org
  http:
    - route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
          weight: 100
#    - destination:
#        host: mon1.prod.beryju.org
#        port:
#          number: 80
#      weight: 40
