clusters/beryjuio-prod/proxy/passthrough-sentry.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-public-proxy
  namespace: proxy
spec:
  type: ExternalName
  externalName: sentry1.prod.beryju.org
  ports:
    - name: http
      protocol: TCP
      port: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentry
  namespace: proxy
spec:
  ingressClassName: istio
  rules:
    - host: sentry.beryju.org
      http:
        paths:
          - backend:
              service:
                name: sentry-public-proxy
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sentry.beryju.org
      secretName: beryjuorg-sentry
