clusters/beryjuio-prod/proxy/radarr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-dl-stack-radarr
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-authentik-proxy-infra
      hosts:
        - radarr-dl-stack.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - radarr-dl-stack.infra.beryju.org
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-dl-stack-radarr
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-dl-stack-radarr
  hosts:
    - radarr-dl-stack.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 7878
            host: radarr.dl-stack.svc.cluster.local
