clusters/beryjuio-prod/proxy/wks-code.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-wks-code
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-authentik-proxy-infra
      hosts:
        - wks-code.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - wks-code.infra.beryju.org
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-wks-code
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-wks-code
  hosts:
    - wks-code.infra.beryju.org
  http:
    - route:
        - destination:
            port:
              number: 8000
            host: workstation-code.workstation.svc.cluster.local
